--- a/css/main.css
+++ b/css/main.css
@@ -21,13 +21,15 @@ html {
  }
 
 header {
-  background-color: #f20086;
+  background-color: #ef0472;
 }
 
 h1 {
   display: inline-block;
   font-size: 1.5rem;
-  margin: 0 auto;
+  text-align: center;
+  margin: 0 auto .5rem;;
+
 }
 
 .logo-left {
@@ -43,6 +45,7 @@ nav ul {
   list-style-type: none;
   padding: 0;
   padding-bottom: .5em;
+  margin: 0;
 }
 
 header nav li {
@@ -56,8 +59,9 @@ header nav a {
   border-radius: 5px;
   color: #fff;
   display: inline-block;
-  padding: .5em 1em;
+  padding: .5em .75em;
   border-radius: 4px #fff;
+  font-size: .75rem;
 }
 
 a:hover {
