--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ h1 {
   display: inline-block;
   font-size: 1.5rem;
   text-align: center;
-  margin: 0 auto .5rem;;
+  margin: 0 auto .5rem;
+
 
 }
 
@@ -69,6 +70,29 @@ a:hover {
   background-color: #fff;
   margin: 0 auto;
   color: #000;
+}
 
+main {
+  margin: 0 1rem;
+}
 
+figure {
+  margin: 0;
+}
+
+.workshop-img {
+  width: 275px;
+  margin: .5rem 0;
+}
+
+h2 {
+  margin-bottom: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
+p {
+  margin: 0;
 }
