--- a/css/main.css
+++ b/css/main.css
@@ -202,7 +202,7 @@ footer p {
   display: inline-block;
 }
  .sm-img {
-   width: 10%;
+   width: 3em;
 }
 
 footer img:hover {
@@ -235,7 +235,7 @@ footer img:hover {
    max-width: 60em;
  }
   .banner-text p {
-    width: 40em;
+
     margin: 0 auto;
     font-weight: normal;
     text-align: center;
@@ -261,15 +261,41 @@ footer img:hover {
   }
 
   .social-media {
+    display: inline-block;
+    width: 49%;
     text-align: left;
+    padding-left: 1em;
+  }
+
+  .footer-info {
+    display: inline-block;
+    width: 49%;
+    text-align: right;
+    padding-right: 1em;
   }
 }
 
-
 @media only screen and (min-width: 60em) {
+  html {
+    font-size: 120%;
+    line-height: 1.5;
+  }
 
+  h1 {
+    font-size: 3rem;
+    margin-bottom: 0;
+  }
+
+  .logo-right,
+  .logo-left {
+    width: 15%;
+  }
 }
 
 @media only screen and (min-width: 90em) {
 
+  html {
+    font-size: 130%;
+    line-height: 1.5;
+  }
 }
